# cesiumkit

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  gallery.yml
api/camera/: index.html
api/clock/: index.html
api/color/: index.html
api/coordinates/: index.html
api/czml/: index.html
api/datasources/: index.html
api/entities/: index.html
api/enums/: index.html
api/events/: index.html
api/gis/: index.html
api/imagery/: index.html
api/ion/: index.html
api/materials/: index.html
api/properties/: index.html
api/scene/: index.html
api/terrain/: index.html
api/utils/: index.html
api/viewer/: index.html
cesiumkit/: __init__.py  _html.py  _js_serializer.py  _shapely.py  _template.py  base.py  camera.py  clock.py  color.py  coordinates.py  czml.py  datasources.py  enums.py  events.py  gis.py  globe.py  imagery.py  ion.py  material.py  math.py  properties.py  scene.py  terrain.py  utils.py  viewer.py
cesiumkit/entities/: __init__.py  _base.py  billboard.py  box.py  corridor.py  cylinder.py  ellipse.py  ellipsoid.py  label.py  model.py  path.py  point.py  polygon.py  polyline.py  polyline_volume.py  rectangle.py  tileset.py  wall.py
cesiumkit/templates/: jupyter.html.j2  viewer.html.j2
docs/: examples.md  gallery.md  getting-started-gis.md  getting-started.md  index.md
docs/api/: camera.md  clock.md  color.md  coordinates.md  czml.md  datasources.md  entities.md  enums.md  events.md  gis.md  imagery.md  ion.md  materials.md  properties.md  scene.md  terrain.md  utils.md  viewer.md
examples/: 01_basic_point.py  02_shapes_and_materials.py  03_multiple_cities.py  04_time_dynamic_satellite.py  05_geojson_and_datasources.py  06_terrain_and_imagery.py  07_3d_models_and_tilesets.py  08_czml_export.py  09_camera_controls.py  10_event_handlers.py  index.html
gallery/: index.html
getting-started/: index.html
getting-started-gis/: index.html
scripts/: generate_gallery.py
scripts/gallery/: 01_globe_hero.py  02_shapes.py  03_cities.py  04_flight_path.py  05_geopandas.py  06_polygon_3d.py
search/: search_index.json
tests/: test_base.py  test_camera.py  test_color.py  test_coordinates.py  test_czml_export.py  test_datasources.py  test_entities.py  test_enums.py  test_gis.py  test_html_output.py  test_imagery.py  test_material.py  test_properties.py  test_shapely.py  test_terrain.py  test_viewer.py
