[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cesiumkit"
version = "0.2.0"
description = "Object-oriented Python interface for CesiumJS 3D geospatial visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jacob Neel" },
]
keywords = [
    "cesium",
    "cesiumjs",
    "geospatial",
    "3d",
    "visualization",
    "globe",
    "maps",
    "gis",
    "czml",
    "gltf",
    "tiles",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
gis = [
    "geopandas>=0.14",
    "shapely>=2.0",
]

[project.urls]
Homepage = "https://github.com/link2427/cesiumkit"
Documentation = "https://link2427.github.io/cesiumkit"
Repository = "https://github.com/link2427/cesiumkit"
Issues = "https://github.com/link2427/cesiumkit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
